tests/NormalTests/paczka1/small_fuzzy/63534414.err
Error in line 1: rurse S189 58,6
Error in line 5: Ah6XEMpYBH S189 40,9
Error in line 2: rurse S447 17,4
Error in line 10: rurse S857 58,3
